<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="car_state">Car State</string>
    <string name="camera">Camera</string>
    <string name="community">Community</string>
    <string name="settings">Settings</string>
    <string name="history_track">History Track</string>
    <string name="temp">Inner Temputure</string>
    <string name="airpressure">AirPressure</string>
    <string name="humidity">Humidity</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="start">Start</string>
    <string name="distance">Distance</string>
    <string name="distancem">km</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="timeoffset">Timeoffset</string>
    <string name="speed">Speed</string>
    <string name="speedm">km/h</string>
    <string name="navi">Navi</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="xlistview_header_hint_normal">Pull to refresh</string>
    <string name="xlistview_header_hint_ready">Loosen to refresh</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Last UpdateTime：</string>
    <string name="xlistview_footer_hint_normal">More</string>
    <string name="xlistview_footer_hint_ready">Loosen to refresh more</string>
    <string name="source">Input Source</string>
    <string name="dest">Input Destination</string>

    <!-- login start -->
        <string name="pass">pass</string>
    <string name="hint_phone">Input phoneNumber</string>
    <string name="hint_getverif">Input verification</string>
    <string name="getverif">Get verification</string>
    <string name="sendverif">Send verification</string>
    <string name="sure">Sure</string>
    <string name="set_password">Set password</string>
    <string name="confire_password">Confire Password</string>
    <string name="login">Login</string>
        <string name="thirdlogin">Third login</string>
    <!-- login end -->

</resources>