<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark" >

    <RelativeLayout
        style="@style/mw"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/login_marginright"
        android:layout_marginRight="@dimen/login_marginright" >

        <EditText
            android:id="@+id/edit_smss_setpassword"
            style="@style/mw"
            android:layout_marginTop="20dp"
            android:background="@drawable/act_login_verifi"
            android:gravity="center"
            android:hint="@string/set_password" />

        <EditText
            android:id="@+id/edit_smss_confirepassword"
            style="@style/mw"
            android:layout_below="@+id/edit_smss_setpassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/act_login_verifi"
            android:gravity="center"
            android:hint="@string/hint_getverif" />

        <Button
            android:id="@+id/btn_login_sure"
            style="@style/ww"
            android:layout_below="@+id/edit_smss_confirepassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/act_login_sure"
            android:text="@string/login" />
    </RelativeLayout>

</FrameLayout>