<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark" >

    <RelativeLayout
        style="@style/mw"
        android:layout_marginLeft="@dimen/login_marginright"
        android:layout_marginRight="@dimen/login_marginright"
        android:layout_marginTop="@dimen/login_marginright" >

        <TextView
            android:id="@+id/tv_login_pass"
            style="@style/dark_text"
            android:layout_alignParentRight="true"
            android:text="@string/pass"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_login_phone"
            style="@style/mw"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_login_pass"
            android:layout_marginTop="20dp"
            android:background="@drawable/act_login_inputphone"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:paddingLeft="50dp" />

        <TextView
            android:id="@+id/tv_login_show"
            style="@style/white_text"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/edit_login_phone"
            android:layout_marginTop="3dp"
            android:background="@drawable/act_login_send"
            android:gravity="center"
            android:text="@string/sendverif" />

        <LinearLayout
            android:id="@+id/llyt_login_verif"
            style="@style/mw"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_login_show"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_login_verif"
                style="@style/style_0m"
                android:background="@drawable/act_login_verifi"
                android:hint="@string/hint_getverif"
                android:inputType="number"
                android:paddingLeft="20dp" />

            <Button
                android:id="@+id/btn_login_getverif"
                style="@style/style_0m"
                android:background="@drawable/selector_sendverif"
                android:text="@string/getverif"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login_sure"
            style="@style/white_text"
            android:layout_below="@+id/llyt_login_verif"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/act_login_sure"
            android:text="@string/sure" />

        <RelativeLayout
            android:id="@+id/llyt_login_thirdlogin"
            style="@style/mw"
            android:layout_below="@+id/btn_login_sure"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                style="@style/ww"
                android:layout_width="@dimen/login_line_width"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/tv_login_third"
                android:src="@drawable/act_login_line" />

            <TextView
                android:id="@+id/tv_login_third"
                style="@style/dark_text"
                android:layout_centerInParent="true"
                android:text="@string/thirdlogin"
                android:textSize="18sp" />

            <ImageView
                style="@style/ww"
                android:layout_width="@dimen/login_line_width"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tv_login_third"
                android:src="@drawable/act_login_line" />
        </RelativeLayout>

        <LinearLayout
            style="@style/mw"
            android:layout_below="@+id/llyt_login_thirdlogin"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/ibtn_login_sina"
                style="@style/style_0w"
                android:background="@null"
                android:padding="20dp"
                android:src="@drawable/selector_sina" />

            <ImageButton
                android:id="@+id/ibtn_login_qq"
                style="@style/style_0w"
                android:background="@null"
                android:padding="20dp"
                android:src="@drawable/selector_qq" />

            <ImageButton
                android:id="@+id/ibtn_login_weixin"
                style="@style/style_0w"
                android:background="@null"
                android:padding="20dp"
                android:src="@drawable/selector_weixin" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>